--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="header-cart">
           <div>
-            <a href="../amazon-clone-main/billing.html">
+            <a href="../amazon-clone/billing.html">
 
               <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                 <path style="cursor:pointer"
