--- a/product.html
+++ b/product.html
@@ -176,7 +176,7 @@
 
     <!-- FOOTER -->
     <footer>
-      <code>Made with ❤️ by NIE GFG Student Chapter</code>&nbsp; | &nbsp;
+      <code>Made with ❤️ by Vitans</code>&nbsp; | &nbsp;
       <span id="year"></span>
     </footer>
     <script>
