--- a/billing.html
+++ b/billing.html
@@ -12,7 +12,7 @@
 
     <div class="card">
         <div class="card-top border-bottom text-center">
-             <a href="../amazon-clone-main/index.html"> Back to Homepage</a>
+             <a href="../amazon-clone/index.html"> Back to Homepage</a>
             <span id="logo">Order Summary</span>
         </div>
         <div class="card-body">
@@ -131,7 +131,7 @@
           <main>
             <div class="py-5 text-center">
 
-                <a href="../amazon-clone-main/index.html"> <img class="d-block mx-auto mb-4" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a9/Amazon_logo.svg/1200px-Amazon_logo.svg.png" alt="" width="15%" height="7%"></a> 
+                <a href="../amazon-clone/index.html"> <img class="d-block mx-auto mb-4" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a9/Amazon_logo.svg/1200px-Amazon_logo.svg.png" alt="" width="15%" height="7%"></a> 
               <!-- <a href=""><img class="d-block mx-auto mb-4" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a9/Amazon_logo.svg/1200px-Amazon_logo.svg.png" alt="" width="15%" height="7%" </a> -->
               <h2>Order Summary</h2>
               <!-- <p class="lead">Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p>
