--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="header-nav">
       <div class="header-container">
 
-        <a href="https://niegfg.github.io/amazon-clone/" class="amazon-logo"><img
+        <a href="https://dewansh07.github.io/amazon-clone/" class="amazon-logo"><img
             src="https://mlsvc01-prod.s3.amazonaws.com/fd4e81f3101/a77159a6-cbf4-46a1-a731-522b77da3e42.png?ver=1649349594000"
             class="amazon-logo" style="cursor:pointer"></a>
 
